<resources>
    <string name="app_name">Dolphin Virtual</string>
    <string name="logo">logoDolphin</string>
    <string name="textCabecalho">Cardápio Virtual</string>
    <string name="textDescriptionBanner">banner com comidas e frutos do mar como camarões</string>
    <string name="textCom">Faça seu pedido</string>


    //interações
    <string name="btnEnt">Entrar</string>
    <string name="btnPedido">Pedir</string>
    <string name="labelPreco">R$ %d</string>
    <string name="ConfirmarPedido">Confirme seu pedido</string>
    <string name="txtPedidos">O seu pedido:</string>

    //int-checkbox
    <string name="checkDescription1">caixa de marcação de item 1</string>
    <string name="checkDescription2">caixa de marcação de item 2</string>
    <string name="checkDescription3">caixa de marcação de item 3</string>
    <string name="checkDescription4">caixa de marcação de item 4</string>
    <string name="checkDescription5">caixa de marcação de item 5 </string>
    <string name="checkDescription6">caixa de marcação de item 6</string>
    <string name="checkDescription7">caixa de marcação de item 7</string>
    <string name="checkDescription8">caixa de marcação de item 8</string>
    <string name="checkDescription9">caixa de marcação de item 9</string>
    <string name="checkDescription10">caixa de marcação de item 10</string>
    <string name="checkDescription11">caixa de marcação de item 11</string>
    <string name="checkDescription12">caixa de marcação de item 12</string>

    //entradas
    <string name="textEntradas">Entradas</string>
    <string name="textInst">Selecione seu pedido abaixo marcando-o ou desmarcando-o.</string>

    <string name="textEntrada1">Iscas de peixe</string>
    <string name="iconDescription">Icone de tempo de preparo</string>
    <string name="textEntrada2">Pesticos de camarão</string>
    <string name="textEntrada3">Lagosta</string>

    //pratos
    <string name="textPratos">Principais</string>

    <string name="textPrato1">Nhoque de camarão</string>
    <string name="textPrato2">Tilápia ao Molho Teriyaki</string>
    <string name="textPrato3">Caranguejo</string>

    //sobremesas
    <string name="textSobremesas">Sobremesas</string>
    <string name="textSob1">Pudim de leite</string>
    <string name="textSob2">Sorvete</string>
    <string name="textSob3">Banana Summers</string>

    //bebidas
    <string name="textBebidas">Bebidas</string>
    <string name="textBeb1">Refrigerante</string>
    <string name="textBeb2">Cerveja</string>
    <string name="textBeb3">Suco (Copo)</string>

    //preços
    <string name="precoEnt1">R$50,00</string>
    <string name="precoEnt2">R$35,00</string>
    <string name="precoEnt3">R$40,00</string>

    <string name="precoPrin1">R$50,00</string>
    <string name="precoPrin2">R$60,00</string>
    <string name="precoPrin3">R$35,00</string>

    <string name="precoSob1">R$8,00</string>
    <string name="precoSob2">R$10,00</string>
    <string name="precoSob3">R$12,00</string>

    <string name="precoBeb1">R$6,00</string>
    <string name="precoBeb2">R$5,00</string>
    <string name="precoBeb3">R$8,00</string>
    <string name="precoBeb4">R$10,00</string>

    //tela extra (confirmar)
    <string name="instConfirmar">Confirme seu pedido</string>
    <string name="textPedido">Seu pedido:</string>
    <string name="Obs">Observações do cliente:</string>
    <string name="InstObs">Caso deseje alteração em relação ao pedido, digite aqui.</string>
    <string name="btnConfirmar">Confirmar</string>

    <string name="textReturn"> </string>
    <string name="textNull">Nada selecionado.</string>
    <string name="textPedidoTotal">R$ %d</string>


    //styles
    <style name="buttonPedir">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:fontFamily">@font/inter_bold</item>
    </style>

    <style name="ConfirmarPedido">
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:fontFamily">@font/inter_bold</item>
    </style>

    <style name="itens">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#9C27B0</item>
        <item name="android:fontFamily">@font/interitens</item>
    </style>

    <style name="stlTelaFinal">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">@font/inter_bold</item>
    </style>

    <style name="labelPedidos">
        <item name="fontFamily">@font/interitens</item>
        <item name="android:textSize">18sp</item>
        <item name="android:textColor">@color/colorOnSecondary</item>
        <item name="android:textColorHint">@color/colorOnSecondary</item>
    </style>

    <style name="Precos">
        <item name="android:textSize">18sp</item>
    </style>

<string name="teste">Confirmar pedido</string>
</resources>